fix vertical align in dashboard table

--- a/webfront/src/blocks/table/table.css
+++ b/webfront/src/blocks/table/table.css
@@ -91,6 +91,14 @@
     margin-left: 14px;
 }
 
+.table_storesGrossSales__difference .fa {
+    vertical-align: middle;
+}
+
+.table_storesGrossSales__differenceValue .fa {
+    vertical-align: middle;
+}
+
 .table_storesGrossSales__difference > div {
 
 }
